# EmployeeTracker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  RESOURCES.md  run.py  setup.cfg
doc/: Documentation.md
emptrk/: __init__.py  setup.py
emptrk/templates/: Home.py
emptrk/templates/Create/: Create_Window.py
emptrk/templates/Select/: Select_Window.py
emptrk/templates/dialogs/: Confirm.py  Error.py
emptrk/utils/: get_entrys.py  handling_entrys.py
