[metadata]
name = emptrk
version = 1.0.0
author = Leonard Becker
author_email = thepythoncoder01@gmail.com
url = https://github.com/Jolumine/emptrk
description = Package containing the employee tracker app
long_description = file: README.md
long_description_content_type = text/markdown 
keywords = Employees, Tracker, administration
license = MIT 

[options]
packages = find: 
zip_safe = True
include_package_data = True 

install_requires = 
PyQt5==5.15.8

[options.entry_points]
console_scripts = my-example-utility = emptrk:main
